# Antibody-Developability-Prediction

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/data_access/: data_sources.ipynb  report.md
scripts/: extract_embeddings.py  prepare_data.py  train.py
src/data/: dataset.py  prepare.py
src/models/: classifier.py  embedder.py
src/training/: trainer.py
