[project]
name = "antibody-developability-prediction"
version = "0.1.0"
description = "Predict antibody developability from sequence using ESM-2 embeddings"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.31",
    "wandb>=0.15",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
